feat: Add app icon and improve wake lock handling
Includes the application icon for better branding and PWA experience.
Refactors wake lock logic to be more concise and robust.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="CPX TIMER">
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
     <title>CPX Master Timer</title>
     <script src="https://cdn.tailwindcss.com"></script>
