--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         .delay-400 { animation-delay: 400ms; }
         .delay-500 { animation-delay: 500ms; }
     </style>
+<script type="module" src="/index.tsx"></script>
 <script type="importmap">
 {
   "imports": {
